--- a/data/settings.json
+++ b/data/settings.json
@@ -1,1 +1,1 @@
-{"warehouse_x": 10, "warehouse_y": 10, "population": 20, "iterations": 2000, "crossover": false, "unavailable": [[6, 6, 2, 2]]}
+{"warehouse_x": 10, "warehouse_y": 10, "population": 20, "iterations": 2000, "crossover": true, "unavailable": [[6, 6, 2, 2]]}
