--- a/data/settings.json
+++ b/data/settings.json
@@ -1,1 +1,1 @@
-{"warehouse_x": 7, "warehouse_y": 7, "population": 8, "iterations": 2000, "crossover": true, "unavailable": [[6, 6, 2, 2]]}
+{"warehouse_x": 6, "warehouse_y": 6, "population": 10, "iterations": 2000, "crossover": false, "unavailable": [[6, 6, 2, 2]]}
